@@ -14,9 +14,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package org.apache.kafka.streams.query;
 
-
+import org.apache.kafka.common.annotation.InterfaceAudience;
 import org.apache.kafka.common.annotation.InterfaceStability.Evolving;
 
 import java.util.Collections;
@@ -41,6 +42,7 @@ import java.util.concurrent.ConcurrentHashMap;
  * reference.
  */
 @Evolving
+@InterfaceAudience.Public
 public class Position {
 
     private final ConcurrentHashMap<String, ConcurrentHashMap<Integer, Long>> position;
@@ -127,7 +129,7 @@ public class Position {
      */
     public Map<Integer, Long> getPartitionPositions(final String topic) {
         final ConcurrentHashMap<Integer, Long> bound = position.get(topic);
-        return bound == null ? Collections.emptyMap() : Collections.unmodifiableMap(bound);
+        return bound == null ? Map.of() : Collections.unmodifiableMap(bound);
     }
 
     private static ConcurrentHashMap<String, ConcurrentHashMap<Integer, Long>> deepCopy(
